@@ -8,17 +8,13 @@ There are a number of improvements that can make a big difference to the out of 
 1. Increase Memory
 1. Don't index all project directories
 1. Disable plugins that you aren't going to use
-1. Use the RubyMine build that uses the experimental JetBrains JVM
 
 **Increase Memory**
 
-Edit the `rubymine.vmoptions` file located in `~/Library/Preferences/RubyMine70` as follows:
+Edit the `rubymine.vmoptions` file located in `~/Library/Preferences/RubyMine80` as follows:
 
-    -server
-    -Xms2048m
-    -Xmx2048m (or 4096)
-    -XX:MaxPermSize=250m
-    -XX:+UseCompressedOops
+    -Xms2g
+    -Xmx2g (or 4g)
 
 Essentially you want to give RubyMine a 2GB JVM.
 If you have an especially large project and you want to run code inspections for the whole project,
@@ -26,4 +22,4 @@ you may have to increase the maximum memory allocation to 4GB.
 
 **Don't Index All Project Directories**
 
-See [[Exclude Directories]]
+See [[Exclude Directories]]. Do _not_ skip this step.
